k8s/namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: serialnumber
  labels:
    name: serialnumber
