k8s/app-backend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: serialnumber-backend
  namespace: serialnumber
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: serialnumber-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serialnumber-backend
  namespace: serialnumber
  labels:
    app: serialnumber-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serialnumber-backend
  template:
    metadata:
      labels:
        app: serialnumber-backend
    spec:
      containers:
        - name: serialnumber-backend
          image: registry.gitlab.com/sethitow/bike-serial-number/backend:latest
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
