k8s/app-frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: serialnumber-frontend
  namespace: serialnumber
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: serialnumber-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serialnumber-frontend
  namespace: serialnumber
  labels:
    app: serialnumber-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serialnumber-frontend
  template:
    metadata:
      labels:
        app: serialnumber-frontend
    spec:
      containers:
        - name: serialnumber-frontend
          image: registry.gitlab.com/sethitow/bike-serial-number/frontend:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
