k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: serialnumber
  namespace: serialnumber
  annotations:
      kubernetes.io/ingress.class: nginx
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - serialnumber.sethitow.com
      secretName: letsencrypt-prod
  rules:
    - host: serialnumber.sethitow.com
      http:
        paths:
          - path: /graphql
            backend:
              serviceName: serialnumber-backend
              servicePort: http
          - path: /
            backend:
              serviceName: serialnumber-frontend
              servicePort: http
